<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity"
    android:background="@color/gl_background"
    android:gravity="center"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
       >


        <TextView
            android:id="@+id/itrack_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itrack_txt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_bye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_txt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="28sp"
            android:layout_below="@+id/itrack_heading"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/global_txt"
            android:layout_below="@+id/txt_bye"
            />
    </RelativeLayout>

</LinearLayout>
